# planaura

./: .gitignore  .gitlab-ci.yml  AUTOVERSION  CONTRIBUTORS.md  LICENSE.txt  README.md  README_FR.md  infer_geotiff.py  infer_photo.py  planaura_hls_config.yaml  planaura_s2_config.yaml  planaura_s2_senegal_config.yaml  pyproject.toml  requirements.txt
assets/: ChangeIntensityStyle.qml
examples/: README.md  infer_data.csv
infer_scripts/: infer_geotiff.py  infer_photo.py
src/planaura/networks/: model.py
src/planaura/utils/: inference_manager.py
src/planaura/utils/raster_management/: tiling_geotiff.py
